--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/png" href="./images/favicon.ico" />
     <title>{{ 'label.product.title' | translate }}</title>
     <style>[data-ng-cloak] { display: none !important; }</style>
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+<script type="text/javascript">google.load("visualization", "1", {packages:["corechart"]});
+</script>
 </head>
 <body  class="preview" id="top" data-spy="scroll" data-target=".subnav" data-offset="80" data-ng-cloak data-ng-controller="MainController">
 <!-- Login Form  -->
