New Activation Process

--- a/app/index.html
+++ b/app/index.html
@@ -61,12 +61,13 @@
     <nav>
         <ul class="margin-nav nav-list ext-sidenav">
             <li><a href="#/nav/offices"><i class="icon-compass icon-large"></i> Navigation</a></li>
-           <!--  <li class="divider"></li>
-            <li><a href="#/tasks"><i class="icon-bell-alt icon-large"></i> Tasks</a></li> -->
-          <!--   <li class="divider"></li>
-            <li><a href="#/entercollectionsheet"><i class="icon-tasks icon-large"></i> Collection Sheet</a></li> -->
+             <li class="divider"></li>
+            <li> <a href="#/createprospects"><i class="icon-user icon-large"></i>+ Prospect</a></li> 
+              
             <li class="divider"></li>
             <li><a href="#/createclient"><i class="icon-user icon-large"></i> + Client </a></li>
+            <li class="divider"></li>
+            <li><a href="#/entercollectionsheet"><i class="icon-tasks icon-large"></i>  + New Activation</a></li>
             <!-- <li class="divider"></li>
             <li><a href="#/creategroup"><i class="icon-group icon-large"></i> + Group </a></li>
             <li class="divider"></li>
@@ -103,8 +104,10 @@
                                 <li><a href="#/users">{{ 'link.admin.users' | translate }}</a></li>
                                 <li><a href="#/organization">{{ 'link.admin.organisation' | translate }}</a></li>
                                 <li><a href="#/system">{{ 'link.admin.system' | translate }}</a></li>
-                               <!--  <li><a href="#/products">{{ 'link.admin.products' | translate }}</a></li> -->
-                                <li><a href="#/templates">{{ 'link.admin.templates' | translate }}</a></li>
+                               <!--  <li><a href="#/products">{{ 'link.admin.products' | translate }}</a></li>
+                                <li><a href="#/templates">{{ 'link.admin.templates' | translate }}</a></li> -->
+                                  <li><a href="#/importing">{{'link.import' | translate }}</a></li>
+                                    <li><a href="#/jobs">Scheduler Jobs</a></li>
                                 <li><a href="#/accounting">{{ 'link.accounting' | translate }}</a></li>
                             </ul>
                         </li>
