--- a/app/index.html
+++ b/app/index.html
@@ -117,14 +117,14 @@
                         <li class="dropdown" id="preview-menu">
                             <a class="dropdown-toggle" data-toggle="dropdown" href="#">{{currentSession.user.name}}<b class="caret"></b></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#"><i class="icon-user"></i>{{ 'link.profile' | translate }}</a></li>
+                                <li><a href="#/profile"><i class="icon-user"></i>{{ 'link.profile' | translate }}</a></li>
                                 <li><a href="#/usersetting"><i class="icon-cog"></i>{{ 'link.settings' | translate }}</a></li>
                                 <li><a data-ng-click="logout()"><i class="icon-off"></i>{{ 'link.logout' | translate }}</a></li>
                             </ul>
                         </li>
                     </ul>
                     <form ng-submit="search()" class="navbar-search pull-right ng-pristine ng-valid">
-                    <input data-ng-model="search.query" type="text" placeholder="Search" class="search-query span2">
+                    <input id="search" data-ng-model="search.query" type="text" placeholder="Search" class="search-query span2">
                     </form>
                 </div>
             </div>
