--- a/app/index.html
+++ b/app/index.html
@@ -119,7 +119,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="#/profile"><i class="icon-user"></i>{{ 'link.profile' | translate }}</a></li>
                                 <li><a href="#/usersetting"><i class="icon-cog"></i>{{ 'link.settings' | translate }}</a></li>
-                                <li><a data-ng-click="logout()"><i class="icon-off"></i>{{ 'link.logout' | translate }}</a></li>
+                                <li><a id="logout" data-ng-click="logout()"><i class="icon-off"></i>{{ 'link.logout' | translate }}</a></li>
                             </ul>
                         </li>
                     </ul>
