--- a/app/index.html
+++ b/app/index.html
@@ -109,6 +109,7 @@
                                   <li><a href="#/importing">{{'link.import' | translate }}</a></li>
                                     <li><a href="#/jobs">Scheduler Jobs</a></li>
                                 <li><a href="#/accounting">{{ 'link.accounting' | translate }}</a></li>
+                                <li><a href="#/paymentGateway">PaymentGateway</a></li>
                             </ul>
                         </li>
                     </ul>
