--- a/app/index.html
+++ b/app/index.html
@@ -125,7 +125,7 @@
                             </ul>
                         </li>
                     </ul>
-                    <form ng-submit="search()" class="navbar-search pull-right ng-pristine ng-valid">
+                    <form ng-submit="search()" class="navbar-search pull-left ng-pristine ng-valid">
                     <input id="search" data-ng-model="search.query" type="text" placeholder="{{ 'label.searchorpress' | translate }}" class="search-query span3">
                     </form>
                 </div>
