--- a/app/index.html
+++ b/app/index.html
@@ -110,6 +110,7 @@
                                     <li><a href="#/jobs">Scheduler Jobs</a></li>
                                 <li><a href="#/accounting">{{ 'link.accounting' | translate }}</a></li>
                                 <li><a href="#/paymentGateway">PaymentGateway</a></li>
+                                <li><a href="#/smartSearch">smartSearch</a></li>
                             </ul>
                         </li>
                     </ul>
