--- a/app/index.html
+++ b/app/index.html
@@ -119,7 +119,10 @@
                     <ul class="nav pull-right" id="main-menu-right">
                         <li>&nbsp;&nbsp;&nbsp;&nbsp;</li>
                         <li class="dropdown" id="preview-menu">
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">{{currentSession.user.name}}<b class="caret"></b></a>
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">{{currentSession.user.name}}<b class="caret"></b>
+                              <span  style="font-family:arial;color:red;font-size:15px;">{{unreadMessage}}</span>
+                            </a>
+                          
                             <ul class="dropdown-menu">
                                 <li><a id="help" href="#/help"><i class="icon-question-sign"></i>{{ 'label.anchor.help' | translate }}</a></li>
                                 <li><a href="#/profile"><i class="icon-user"></i>{{ 'link.profile' | translate }}</a></li>
