--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,27 @@
   </div>  
 </div>
 <!-- Navbar -->
-<div class="fullscreen" data-ng-hide="currentSession.user == null">
+<div ng-class="{fullscreen:true ,blockui:blockUI==true}" id="main"  data-ng-hide="currentSession.user == null">
+   <div class="loading-widget-div" data-ng-show="blockUI">
+        <div id="circularG">
+            <div id="circularG_1" class="circularG">
+            </div>
+            <div id="circularG_2" class="circularG">
+            </div>
+            <div id="circularG_3" class="circularG">
+            </div>
+            <div id="circularG_4" class="circularG">
+            </div>
+            <div id="circularG_5" class="circularG">
+            </div>
+            <div id="circularG_6" class="circularG">
+            </div>
+            <div id="circularG_7" class="circularG">
+            </div>
+            <div id="circularG_8" class="circularG">
+            </div>
+        </div>
+    </div>
     <nav>
         <ul class="margin-nav nav-list ext-sidenav">
             <li><a href="#/nav/offices"><i class="icon-compass icon-large"></i> Navigation</a></li>
@@ -141,6 +161,7 @@
         </div>
     </div>
     <div class="container whitebg fullscreen">
+      <div>
         <div class="row-fluid whitebg">
             <div class="span12 pull-right whitebg">
                 <div class="whitebg" ng-view></div>
@@ -148,6 +169,7 @@
             <!-- Footer -->
             <hr>
         </div> <!-- /row-fluid -->
+       </div><!-- /blockui-->
     </div><!-- /container -->
 </div>
 
