--- a/app/index.html
+++ b/app/index.html
@@ -57,9 +57,9 @@
     <div class="row">
   </div>  
 </div>
-<!-- Navbar -->
-<div ng-class="{fullscreen:true ,blockui:blockUI==true}" id="main"  data-ng-hide="currentSession.user == null">
-    <div class="loading-widget-div" data-ng-show="blockUI">
+<!-- Navbar,blockui:blockUI==true -->
+<div ng-class="{fullscreen:true }" id="main"  data-ng-hide="currentSession.user == null">
+   <!--  <div class="loading-widget-div" data-ng-show="blockUI">
         <div id="circularG">
             <div id="circularG_1" class="circularG">
             </div>
@@ -78,7 +78,7 @@
             <div id="circularG_8" class="circularG">
             </div>
         </div>
-    </div> 
+    </div>  -->
     <nav>
         <ul class="margin-nav nav-list ext-sidenav">
             <li><a href="#/nav/offices"><i class="icon-compass icon-large"></i> Navigation</a></li>
