--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
         <br/><br/>
         <div class="pull-right">
 
-            <input type="text" data-ng-model="loginCredentials.username"   placeholder="{{ 'label.username' | translate }}" value="billing" class="input-small" required>
+            <input ng-autofocus="true" type="text" data-ng-model="loginCredentials.username"   placeholder="{{ 'label.username' | translate }}" value="billing" class="input-small" required>
             <input id="pwd"  type="password" data-ng-model="loginCredentials.password"   placeholder="{{ 'label.password' | translate }}" value="password" class="input-small"  required>
             <button class="btn btn-success" type="submit" data-ng-click="login()">{{ 'label.signin' | translate }}</button>
         </div>
@@ -57,9 +57,9 @@
     <div class="row">
   </div>  
 </div>
-<!-- Navbar -->
-<div ng-class="{fullscreen:true,blockui:blockUI==true }" id="main"  data-ng-hide="currentSession.user == null">
-      <div class="loading-widget-div" data-ng-show="blockUI">
+<!-- Navbar ,blockui:blockUI==true -->
+<div ng-class="{fullscreen:true}" id="main"  data-ng-hide="currentSession.user == null">
+      <!-- <div class="loading-widget-div" data-ng-show="blockUI">
         <div id="circularG">
             <div id="circularG_1" class="circularG">
             </div>
@@ -78,7 +78,7 @@
             <div id="circularG_8" class="circularG">
             </div>
         </div>
-    </div>  
+    </div>   -->
     <nav>
         <ul class="margin-nav nav-list ext-sidenav">
             <li><a href="#/nav/offices"><i class="icon-compass icon-large"></i> Navigation</a></li>
