--- a/app/index.html
+++ b/app/index.html
@@ -94,7 +94,9 @@
             <li class="divider"></li>
             <li><a href="#/createclientnewwizard"><i class="icon-tasks icon-large"></i>  + New Activation</a></li>
             <li class="divider"></li>
-            <li><a class="bolder black" href="#/help"><i class="icon-question-sign icon-large"></i>&nbsp;&nbsp;&nbsp;{{ 'label.anchor.help' | translate }}</a></li>
+            <li><a class="bolder black" href="#/help"><i class="icon-hand-right icon-large"></i>&nbsp;&nbsp;&nbsp;{{ 'label.anchor.shortcuts' | translate }}</a></li>
+            <li class="divider"></li>
+            <li><a target="http://www.openbillingsystem.com/how-it-works" href="http://www.openbillingsystem.com/how-it-works"><i class=" icon-question-sign"></i>{{ 'label.anchor.help' | translate }}</a></li>
             <!-- <li class="divider"></li>
             <li><a href="#/creategroup"><i class="icon-group icon-large"></i> + Group </a></li>
             <li class="divider"></li>
@@ -136,8 +138,8 @@
                                   <li><a href="#/importing">{{'link.import' | translate }}</a></li>
                                     <li><a href="#/jobs">Scheduler Jobs</a></li>
                                 <li><a href="#/accounting">{{ 'link.accounting' | translate }}</a></li>
-                                 <li><a href="#/smartSearch">smartSearch</a></li>
-                                <li><a href="#/paymentGateway">PaymentGateway</a></li>
+                                 <li><a href="#/smartSearch">Smart Search</a></li>
+                                <li><a href="#/paymentGateway">Payment Gateway</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -149,10 +151,11 @@
                             </a>
                           
                             <ul class="dropdown-menu">
-                                <li><a id="help" href="#/help"><i class="icon-question-sign"></i>{{ 'label.anchor.help' | translate }}</a></li>
+                                <li><a id="help" href="#/help"><i class="icon-hand-right"></i>{{ 'label.anchor.shortcuts' | translate }}</a></li>
                                 <li><a href="#/profile"><i class="icon-user"></i>{{ 'link.profile' | translate }}</a></li>
                                  <li><a href="#/messanger"><i class="icon-envelope"></i>{{ 'link.messanger' | translate }}</a></li>
                                 <li><a href="#/usersetting"><i class="icon-cog"></i>{{ 'link.settings' | translate }}</a></li>
+                                <li><a target="http://www.openbillingsystem.com/how-it-works" href="http://www.openbillingsystem.com/how-it-works"><i class=" icon-question-sign"></i>{{ 'label.anchor.help' | translate }}</a></li>
                                 <li><a id="logout" data-ng-click="logout()"><i class="icon-off"></i>{{ 'link.logout' | translate }}</a></li>
                             </ul>
                         </li>
