changes to help and clientview top bar for device and search for reports

--- a/app/index.html
+++ b/app/index.html
@@ -96,7 +96,7 @@
             <li class="divider"></li>
             <li><a class="bolder black" href="#/help"><i class="icon-hand-right icon-large"></i>&nbsp;&nbsp;&nbsp;{{ 'label.anchor.shortcuts' | translate }}</a></li>
             <li class="divider"></li>
-            <li><a target="http://www.openbillingsystem.com/how-it-works" href="http://www.openbillingsystem.com/how-it-works"><i class=" icon-question-sign"></i>{{ 'label.anchor.help' | translate }}</a></li>
+            <li><a target="http://help.openbillingsystem.com" href="http://help.openbillingsystem.com"><i class=" icon-question-sign"></i>{{ 'label.anchor.help' | translate }}</a></li>
             <!-- <li class="divider"></li>
             <li><a href="#/creategroup"><i class="icon-group icon-large"></i> + Group </a></li>
             <li class="divider"></li>
@@ -155,7 +155,7 @@
                                 <li><a href="#/profile"><i class="icon-user"></i>{{ 'link.profile' | translate }}</a></li>
                                  <li><a href="#/messanger"><i class="icon-envelope"></i>{{ 'link.messanger' | translate }}</a></li>
                                 <li><a href="#/usersetting"><i class="icon-cog"></i>{{ 'link.settings' | translate }}</a></li>
-                                <li><a target="http://www.openbillingsystem.com/how-it-works" href="http://www.openbillingsystem.com/how-it-works"><i class=" icon-question-sign"></i>{{ 'label.anchor.help' | translate }}</a></li>
+                                <li><a target="http://help.openbillingsystem.com/" href="http://help.openbillingsystem.com/"><i class=" icon-question-sign"></i>{{ 'label.anchor.help' | translate }}</a></li>
                                 <li><a id="logout" data-ng-click="logout()"><i class="icon-off"></i>{{ 'link.logout' | translate }}</a></li>
                             </ul>
                         </li>
