--- a/app/index.html
+++ b/app/index.html
@@ -140,6 +140,7 @@
                                 <li><a href="#/accounting">{{ 'link.accounting' | translate }}</a></li>
                                  <li><a href="#/smartSearch">Smart Search</a></li>
                                 <li><a href="#/paymentGateway">Payment Gateway</a></li>
+                                 <li><a href="#/ipPooling">IpPooling</a></li>
                             </ul>
                         </li>
                     </ul>
