--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
     </div>
     <div class="row">
       <div class="span4">
-            <div style="border: 1px solid #DDDDDD;padding:15px;">
+            <div style="border: 1px solid #DDDDDD;padding:15px;height:112px">
                 <div style="background-color: #F5F5F5;border-bottom: 1px solid #DDDDDD;padding: 10px 15px;margin: -15px -15px 15px;">
                     <strong>{{ 'label.heading.resources' | translate }}</strong>
                 </div>
@@ -83,7 +83,7 @@
             </div>
     </div>
     <div class="span4">
-            <div style="border: 1px solid #DDDDDD;padding:15px;">
+            <div style="border: 1px solid #DDDDDD;padding:15px;height:112px">
                 <div style="background-color: #F5F5F5;border-bottom: 1px solid #DDDDDD;padding: 10px 15px;margin: -15px -15px 15px;">
                     <strong>{{ 'label.heading.news' | translate }}</strong>
                 </div>
