dashboard and inventory and leads added to reports list

--- a/app/index.html
+++ b/app/index.html
@@ -180,7 +180,9 @@
                                 <li><a href="#/reports/clients">{{ 'link.reports.clients' | translate }}</a></li>
                                 <li><a href="#/reports/Orders">{{ 'link.reports.orders' | translate }}</a></li>
                                 <li><a href="#/reports/tickets">{{ 'link.reports.tickets' | translate }}</a></li>
-                                <li><a href="#/reports/accounting">{{ 'link.reports.accounting' | translate }}</a></li>
+                                <li><a href="#/reports/inventory">{{ 'link.reports.inventory' | translate }}</a></li>
+                                 <li><a href="#/reports/leads">{{ 'link.reports.leads' | translate }}</a></li>
+                                  <li><a href="#/reports/accounting">{{ 'link.reports.accounting' | translate }}</a></li>
                             </ul>
                         </li>
                          
