--- a/myaccount/index.html
+++ b/myaccount/index.html
@@ -21,6 +21,9 @@
          	<strong>Client is already Registered with this mailId <a>{{mailId}}</a>.<br/>
 							   Please Sign In..!</strong>
 		</div>
+		<div class="alert alert-info animated tada" role="alert" ng-show="isChangePassword">
+         	<strong>Password changed successfully...</strong>
+		</div>
          <table style="width:100%;">
           <tr>
          	 <td style="padding-left:125px;">
