--- a/myaccount/index.html
+++ b/myaccount/index.html
@@ -12,17 +12,16 @@
    <div class="container well"  data-ng-hide="currentSession.user != null">
         <div class="row form-search ng-pristine ng-valid paddedbottom" data-ng-form="signInForm" data-ng-controller="SignInFormController">
          <div class="alert alert-success animated tada" role="alert" ng-show="isRegistrationSuccess">
-         	<strong>Thank you for registering! A conformation mail has sent to your mailId <a>{{mailId}}</a>.
-					 Please click on the Activation Link <br>to activate your account.To go Click Here  
-					 <a href="http://www.gmail.com" class="alert-link">Gmail Account</a></strong>
+         	<strong>{{'title.conformation.registration' | translate}}<br/>{{'title.toactive.msg' | translate}} 
+					 <a href="http://www.gmail.com" target="_blank" class="alert-link">{{'link.gmail.account' | translate}}</a></strong>
 					 
 		</div>
 		 <div class="alert alert-info animated tada" role="alert" ng-show="isRegistrationFailure">
-         	<strong>Client is already Registered with this mailId <a>{{mailId}}</a>.<br/>
-							   Please Sign In..!</strong>
+         	<strong>{{'title.conformation.alreadyregistration' | translate}}<br/>
+							   {{'title.signin.msg' | translate}}</strong>
 		</div>
 		<div class="alert alert-info animated tada" role="alert" ng-show="isChangePassword">
-         	<strong>Password changed successfully...</strong>
+         	<strong>{{'title.password.changed' | translate}}</strong>
 		</div>
          <table style="width:100%;">
           <tr>
@@ -37,42 +36,47 @@
 				                <h1>{{ 'label.product.name' | translate }}</h1>
 				                <span>{{ 'label.product.version' | translate }}</span><br/>
 				                <span>{{ 'label.product.status' | translate }}</span><br/>
-				                <span>{{ 'label.product.aboutus1' | translate }}<a target="http://www.openbillingsystem.com/" href="http://www.openbillingsystem.com/">{{ 'label.community.name' | translate }}</a>.
+				                <span>{{ 'label.product.aboutus1' | translate }}<a target="http://www.openbillingsystem.com/" href="http://www.openbillingsystem.com/">{{ 'label.community.name' | translate }}</a>.</span>
 				            </td>
 				        </tr>
 				    </table>        
 	    		</div >
           	  </td>
                <td>
-	               <div  class="row paddedbottom pull-right border-box-shape" ng-show="signUpFormView">
+	               <!-- <div  class="row paddedbottom pull-right border-box-shape" ng-show="signUpFormView">
+	        	   		 <ng-include src="template" ></ng-include>
+	        		</div> -->
+	        		 <div ng-show="signUpFormView">
 	        	   		 <ng-include src="template" ></ng-include>
 	        		</div>
-		     		<div id="animated-example1" class="row paddedbottom pull-right border-box-shape animated bounceIn" ng-show="signInFormView"> 
-				   		 <h2 style="color:#000000"><strong>Sign In</strong></h2><hr>
-				   		 	<div class="alert alert-danger animated tada" role="alert" data-ng-show="authenticationFailed">
-				   		 		<strong>{{ 'error.login.failed' | translate }}</strong>
-				   		 	</div>
-				   		 	<div class="alert alert-danger animated tada" role="alert" data-ng-show="emptyCredentials">
-				   		 		<strong>Please fill all Details..</strong>
-				   		 	</div>
-				   		 <table>
-				   		   <tr>
-					   		 <td><i class="icon-user"></i><br><br></td>
-					   		 <td><input ng-autofocus="true" type="text" data-ng-model="loginCredentials.username" class="input-xtra-large" 
-				   					ng-disabled="signInProcessLoading" placeholder="Email" required><br><br></td>
-			   			   <tr>
-			   				<td><i class="icon-key"></i></td>
-			   				<td><input id="pwd"  type="password" data-ng-model="loginCredentials.password"  class="input-xtra-large"
-			           			ng-disabled="signInProcessLoading" placeholder="{{ 'label.password' | translate }}" required></td></tr>
-			           		</table>
-			           		<div class="pull-right" style="color:#428bca;"data-ng-click="forgotPwdPopup()"><a>Forgot Password?</a></div><br/><br/>
-			           	<button class="btn btn-primary pull-right btn-xtra-styles"ng-hide="signInProcessLoading" type="submit"  data-ng-click="signUpBtnFun()">{{ 'btn.signup' | translate }}</button>
-			           	<button class="btn btn-success pull-right btn-xtra-styles" ng-hide="signInProcessLoading" type="submit" style="" data-ng-click="login()">{{ 'btn.signin' | translate }}</button>
-			           	<div class="btn pull-right" style="color:#000000;padding:5px;" ng-show="signInProcessLoading">{{'label.pleasewait' | translate}}
-							<img alt="Loading.." ng-show="signInProcessLoading" ng-src="./selfcare_module/images/ajax-loader.gif" width="20px"/>
-					  </div> 
-			           			 
-				    </div>
+	        		<div ng-show="signInFormView">
+			     		<div id="animated-example1" class="row paddedbottom pull-right border-box-shape animated bounceIn" > 
+					   		 <h2 style="color:#000000"><strong>{{'label.signin' | translate}}</strong></h2><hr>
+					   		 	<div class="alert alert-danger animated tada" role="alert" data-ng-show="authenticationFailed">
+					   		 		<strong>{{ 'error.login.failed' | translate }}</strong>
+					   		 	</div>
+					   		 	<div class="alert alert-danger animated tada" role="alert" data-ng-show="emptyCredentials">
+					   		 		<strong>{{'title.fill.alldetails' | translate}}</strong>
+					   		 	</div>
+					   		 <table>
+					   		   <tr>
+						   		 <td><i class="icon-user"></i><br><br></td>
+						   		 <td><input ng-autofocus="true" type="text" data-ng-model="loginCredentials.username" class="input-xtra-large" 
+					   					ng-disabled="signInProcessLoading" placeholder="{{'label.email' | translate}}" required><br><br></td>
+				   			   <tr>
+				   				<td><i class="icon-key"></i></td>
+				   				<td><input id="pwd"  type="password" data-ng-model="loginCredentials.password"  class="input-xtra-large"
+				           			ng-disabled="signInProcessLoading" placeholder="{{ 'label.password' | translate }}" required></td></tr>
+				           		</table>
+				           		<div class="pull-right" style="color:#428bca;"data-ng-click="forgotPwdPopup()"><a>{{'label.forgot.password' | translate}}</a></div><br/><br/>
+				           	<!-- <button class="btn btn-primary pull-right btn-xtra-styles"ng-hide="signInProcessLoading" type="submit"  data-ng-click="signUpBtnFun()">{{ 'btn.signup' | translate }}</button> -->
+				           	<button class="btn btn-success pull-right btn-xtra-styles" ng-hide="signInProcessLoading" type="submit" style="" data-ng-click="login()">{{ 'btn.signin' | translate }}</button>
+				           	<div class="btn pull-right" style="color:#000000;padding:5px;" ng-show="signInProcessLoading">{{'label.pleasewait' | translate}}
+								<img alt="Loading.." ng-show="signInProcessLoading" ng-src="./selfcare_module/images/ajax-loader.gif" width="20px"/>
+						  </div> 
+					    </div>
+		 				<div class="pull-right" ng-hide="signInProcessLoading" data-ng-click="signUpBtnFun()">{{'label.not.auser' |translate}}<a>{{ 'btn.signup' | translate }}</a></div>
+		 			</div>
 		    	</td>
 		     </tr>
 		  </table>
@@ -131,21 +135,21 @@
 	                <a class="brand" ><img src="./selfcare_module/images/obs_logo.png" alt="SelfCare" width="50px;"></a>
 	                <div class="nav-collapse collapse" id="main-menu">
 	                    <ul class="nav" id="main-menu-left" ng-show="isSignInProcess">
-	                     <li><a href="#/profile" ng-class="{ activate: isActive('/profile') }"><i class="icon-user icon-white"></i>Profile</a></li>
-	                     <li><a href="#/additionalorders/0/0" ng-class="{ activate: isActive('/additionalorders/0/0') }"><i class="icon-plus-sign icon-white"></i>Additional Orders</a></li>
-	                     <li><a href="#/vodevents" ng-class="{ activate: isActive('/vodevents') }"><i class="icon-plus-sign icon-white"></i>VOD</a></li>
-                        <li><a href="#/orders" ng-class="{ activate: isActive('/orders') }"><i class="icon-list"></i>Orders</a></li>
-                        <li><a href="#/statements" ng-class="{ activate: isActive('/statements') }"><i class="icon-file icon-white"></i>Statements</a></li>
-                         <li><a href="#/payments"  ng-class="{ activate: isActive('/payments') }"><i class="icon-usd"></i>Payments</a></li>
-                         <li><a href="#/tickets"  ng-class="{ activate: isActive('/tickets') }"><i class="icon-money"></i>Tickets</a></li>
+	                     <li><a href="#/profile" ng-class="{ activate: isActive('/profile') }"><i class="icon-user icon-white"></i>{{'label.profile' | translate}}</a></li>
+	                     <li><a href="#/additionalorders/0/0" ng-class="{ activate: isActive('/additionalorders/0/0') }"><i class="icon-plus-sign icon-white"></i>{{'label.additionalplans' | translate}}</a></li>
+	                     <li><a href="#/vodevents" ng-class="{ activate: isActive('/vodevents') }"><i class="icon-plus-sign icon-white"></i>{{'label.vod' | translate}}</a></li>
+                        <li><a href="#/orders" ng-class="{ activate: isActive('/orders') }"><i class="icon-list"></i>{{'label.contracts' | translate}}</a></li>
+                        <li><a href="#/statements" ng-class="{ activate: isActive('/statements') }"><i class="icon-file icon-white"></i>{{'label.statements' | translate}}</a></li>
+                         <li><a href="#/payments"  ng-class="{ activate: isActive('/payments') }"><i class="icon-usd"></i>{{'label.payments' | translate}}</a></li>
+                         <li><a href="#/tickets"  ng-class="{ activate: isActive('/tickets') }"><i class="icon-money"></i>{{'label.tickets' | translate}}</a></li>
 	                    </ul>
 	                    <ul class="nav pull-right" id="main-menu-right" ng-show="isSignInProcess">
 	                        <li class="dropdown" id="preview-menu">
-	                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">My Account<b class="caret"></b>
+	                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">{{selfcare_userName}}<b class="caret"></b>
 	                            </a>
 	                            <ul class="dropdown-menu">
-	                            	<li><a href="#/changepwd"><i class="icon-cog"></i>Change Password</a></li>
-	                                <li><a id="logout" ng-click="signout()"><i class="icon-off"></i>Sign Out</a></li>
+	                            	<li><a href="#/changepwd"><i class="icon-cog"></i>{{'label.change.password' | translate}}</a></li>
+	                                <li><a id="logout" ng-click="signout()"><i class="icon-off"></i>{{'label.signout' | translate}}</a></li>
 	                            </ul>
 	                        </li>
 	                    </ul>
@@ -170,7 +174,7 @@
                     <div class="modal-body modal-small" style="padding:25px 0px 0px 35px;">
                        	<div class="control-group">
 							<div class="controls">
-							   Now Your Account is Activated.Username and Password has sent to your mailID.Please Sign In..!
+							   {{'title.account.activated' | translate}}
 							</div>	
 						</div>
                     </div>
@@ -180,7 +184,7 @@
       </script>
       <script type="text/ng-template" id="forgotpwdpopup.html">
                     <div class="modal-header silver">
-                        <h3 class="bolder">Forgot Password</h3>
+                        <h3 class="bolder">{{'header.forgot.password' | translate}}</h3>
                     </div>
 				<form name="forgotForm" novalidate="" class="form-horizontal ">
 						<div class="control-group">
@@ -190,7 +194,7 @@
 						</div>  
                     <div class="modal-body modal-small" style="padding:25px 0px 0px 35px;" >
                        	<div class="control-group">
-							<label class="control-label">Email ID&nbsp;:<span class="required">*</span></label>
+							<label class="control-label">{{'label.emailid' | translate}}&nbsp;:<span class="required">*</span></label>
 							<div class="controls">
 							   <input type="email" id="email" ng-model="emailData.email" required/>
 							</div>	
@@ -213,7 +217,7 @@
                     <div class="modal-body modal-small" style="padding:25px 0px 0px 35px;">
                        	<div class="control-group">
 							<div class="controls">
-							   An email has sent to your mailID.Please verify then Sign In.. 
+							   {{'title.verify.emailid' | translate}} 
 							</div>	
 						</div>
                     </div>
